Simple Hero Page added when user first lands on the app or clicks on home or app name

--- a/src/app/components/add-key/add-key.component.html
+++ b/src/app/components/add-key/add-key.component.html
@@ -164,7 +164,7 @@
       <!-- Upload Private Key -->
       <div *ngIf="publicKeyRetrieved" class="mt-6">
         <p class="text-lg font-medium text-gray-800 mb-4">
-          Upload your private key:
+          Add your private key:
         </p>
         <input
           type="file"
