Cleanup and making the routes work

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
 <header class="bg-gray-900 text-white p-4 flex justify-between items-center">
-  <h1 class="text-xl font-bold cursor-pointer hover:text-gray-300">Chat App</h1>
+  <h1 class="text-xl font-bold cursor-pointer hover:text-gray-300">
+    <a routerLink="/" class="hover:text-gray-300">Chat App</a>
+  </h1>
   <nav>
     <ul class="flex gap-4">
       <li>
