--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -15,7 +15,7 @@
       right in your browser.
     </p>
 
-    <div class="flex justify-center space-x-4 flex-wrap">
+    <div class="flex justify-center space-x-4 flex-wrap cursor-pointer">
       <a
         routerLink="/chat"
         class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-full font-semibold pointer-events-auto transition"
@@ -23,7 +23,7 @@
         Go to Chat
       </a>
       <a
-        routerLink="/files"
+        routerLink="/file-share"
         class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-full font-semibold pointer-events-auto transition"
       >
         Go to File Sharing
