UI Status handling

--- a/src/app/components/file-share/file-share.component.html
+++ b/src/app/components/file-share/file-share.component.html
@@ -31,7 +31,8 @@
         fileShareService.connectionStatus() === 'connecting'
     }"
   >
-    {{ fileShareService.connectionStatus() }}
+    {{ connectionStatusUIValue() }}
+    <!-- {{ fileShareService.connectionStatus() }} -->
   </div>
 
   <!-- Error Message Display -->
